--- a/src/main/webapp/metadata/metadata.htm
+++ b/src/main/webapp/metadata/metadata.htm
@@ -204,8 +204,8 @@
 			        {field:'fed_format',title:'字段格式',width:80,formatter:fed_type_formatter,editor:fed_type_editor},
 			        {field:'fed_defval',title:'默认值',width:60,editor:'text'},
 			        {field:'fed_defval_auto',title:'默认值补全',width:100,editor:'text'},
-			        {field:'fed_isdic',title:'字典字段',width:60,editor:check_editor,align:'center'},
-			        {field:'fed_iscln',title:'参与清洗',width:60,editor:check_editor,align:'center'}
+			        {field:'fed_isdic',title:'字典字段',width:80,formatter:fed_type_formatter,editor:fed_type_editor},
+			        {field:'fed_iscln',title:'参与清洗',width:80,formatter:fed_type_formatter,editor:fed_type_editor}
 			    ]],
 			    fitColumns:true,
 			    border:false,
@@ -283,8 +283,8 @@
 			        {field:'fed_format',title:'字段格式',width:80,formatter:fed_type_formatter,editor:fed_type_editor},
 			        {field:'fed_defval',title:'默认值',width:60,editor:'text'},
 			        {field:'fed_defval_auto',title:'默认值补全',width:100,editor:'text'},
-			        {field:'fed_isdic',title:'字典字段',width:60,editor:check_editor,align:'center'},
-			        {field:'fed_iscln',title:'参与清洗',width:60,editor:check_editor,align:'center'}
+			        {field:'fed_isdic',title:'字典字段',width:80,formatter:fed_type_formatter,editor:fed_type_editor},
+			        {field:'fed_iscln',title:'参与清洗',width:80,formatter:fed_type_formatter,editor:fed_type_editor}
 			    ]],
 			    queryParams:{
 			    	id:id
